# Chatbot

./: .env.example  .gitignore  Dockerfile  README.MD  pyproject.toml
app/: config.py  main.py  security.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: nifty_bridge_terms.py  nifty_bridge_terms_assistant.py
app/errors/: app_errors.py
app/services/: base.py  nifty_bridge_terms.py  nifty_bridge_terms_assistant.py
