[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Vlad <vladislav.sytyuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.10"
fastapi = "0.99.1"
openai = "^0.27.8"
langchain = "^0.0.266"
chromadb = "^0.4.6"
tiktoken = "^0.4.0"
pypdfium2 = "^4.18.0"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
