[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Vlad <vladislav.sytyuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.10"
fastapi = "0.99.1"
openai = "^0.27.8"
langchain = "^0.0.266"
tiktoken = "^0.4.0"
pypdfium2 = "^4.18.0"
black = "^23.7.0"
uvicorn = "^0.23.2"
qdrant-client = "^1.4.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
